fix alignment of login box

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ nav[role=navigation] {
 	text-align: center;
 	left: 50%;
 	width: 500px;
-	margin-left: -200px;
+	margin-left: -250px;
 	position: absolute;
 	top: 30%;
 }
